@@ -1,6 +1,6 @@
 #MIN_CONFIG(3.2.0)
 
-AM_INIT_AUTOMAKE(kuroo, 0.80.0)
+AM_INIT_AUTOMAKE(kuroo, 0.82.0)
 AC_C_BIGENDIAN
 AC_CHECK_KDEMAXPATHLEN
 
